// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages changing 1`] = `
<div
  className="react-slicer"
>
  <div
    className="react-slicer__view"
  >
    <div
      key="1"
    >
      Item 1
    </div>
    <div
      key="2"
    >
      Item 2
    </div>
    <div
      key="3"
    >
      Item 3
    </div>
  </div>
  <Pagination
    currentPage={1}
    customClass="react-slicer"
    nextBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_next"
      >
        &gt;
      </span>
    }
    nextPage={[Function]}
    numberOfPages={3}
    prevBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_prev"
      >
        &lt;
      </span>
    }
    prevPage={[Function]}
    setPage={[Function]}
  />
</div>
`;

exports[`Pages changing 2`] = `
<div
  className="react-slicer"
>
  <div
    className="react-slicer__view"
  >
    <div
      key="1"
    >
      Item 1
    </div>
    <div
      key="2"
    >
      Item 2
    </div>
    <div
      key="3"
    >
      Item 3
    </div>
  </div>
  <Pagination
    currentPage={1}
    customClass="react-slicer"
    nextBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_next"
      >
        &gt;
      </span>
    }
    nextPage={[Function]}
    numberOfPages={3}
    prevBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_prev"
      >
        &lt;
      </span>
    }
    prevPage={[Function]}
    setPage={[Function]}
  />
</div>
`;

exports[`Pages changing 3`] = `
<div
  className="react-slicer"
>
  <div
    className="react-slicer__view"
  >
    <div
      key="1"
    >
      Item 1
    </div>
    <div
      key="2"
    >
      Item 2
    </div>
    <div
      key="3"
    >
      Item 3
    </div>
  </div>
  <Pagination
    currentPage={1}
    customClass="react-slicer"
    nextBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_next"
      >
        &gt;
      </span>
    }
    nextPage={[Function]}
    numberOfPages={3}
    prevBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_prev"
      >
        &lt;
      </span>
    }
    prevPage={[Function]}
    setPage={[Function]}
  />
</div>
`;

exports[`Pages changing 4`] = `
<div
  className="react-slicer"
>
  <div
    className="react-slicer__view"
  >
    <div
      key="1"
    >
      Item 1
    </div>
    <div
      key="2"
    >
      Item 2
    </div>
    <div
      key="3"
    >
      Item 3
    </div>
  </div>
  <Pagination
    currentPage={1}
    customClass="react-slicer"
    nextBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_next"
      >
        &gt;
      </span>
    }
    nextPage={[Function]}
    numberOfPages={3}
    prevBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_prev"
      >
        &lt;
      </span>
    }
    prevPage={[Function]}
    setPage={[Function]}
  />
</div>
`;

exports[`Render with custom class 1`] = `
<div
  className="custom-class"
>
  <div
    className="custom-class__view"
  >
    <div>
      Item 1
    </div>
    <div>
      Item 2
    </div>
    <div>
      Item 3
    </div>
  </div>
  <ul
    className="custom-class__pagination"
  >
    <li
      className="custom-class__pagination-item custom-class__pagination-item_prev"
      onClick={[Function]}
    >
      <span
        className="react-slicer__arrow react-slicer__arrow_prev"
      >
        &lt;
      </span>
    </li>
    <li
      className="custom-class__pagination-item custom-class__pagination-item_active"
      id="num-1"
      onClick={[Function]}
    >
      1
    </li>
    <li
      className="custom-class__pagination-item"
      id="num-2"
      onClick={[Function]}
    >
      2
    </li>
    <li
      className="custom-class__pagination-item"
      id="num-3"
      onClick={[Function]}
    >
      3
    </li>
    <li
      className="custom-class__pagination-item custom-class__pagination-item_next"
      onClick={[Function]}
    >
      <span
        className="react-slicer__arrow react-slicer__arrow_next"
      >
        &gt;
      </span>
    </li>
  </ul>
</div>
`;

exports[`Render without crashing 1`] = `
<div
  className="react-slicer"
>
  <div
    className="react-slicer__view"
  >
    <div>
      Item 1
    </div>
    <div>
      Item 2
    </div>
    <div>
      Item 3
    </div>
  </div>
  <ul
    className="react-slicer__pagination"
  >
    <li
      className="react-slicer__pagination-item react-slicer__pagination-item_prev"
      onClick={[Function]}
    >
      <span
        className="react-slicer__arrow react-slicer__arrow_prev"
      >
        &lt;
      </span>
    </li>
    <li
      className="react-slicer__pagination-item react-slicer__pagination-item_active"
      id="num-1"
      onClick={[Function]}
    >
      1
    </li>
    <li
      className="react-slicer__pagination-item"
      id="num-2"
      onClick={[Function]}
    >
      2
    </li>
    <li
      className="react-slicer__pagination-item"
      id="num-3"
      onClick={[Function]}
    >
      3
    </li>
    <li
      className="react-slicer__pagination-item react-slicer__pagination-item_next"
      onClick={[Function]}
    >
      <span
        className="react-slicer__arrow react-slicer__arrow_next"
      >
        &gt;
      </span>
    </li>
  </ul>
</div>
`;

exports[`Setting page 1`] = `
<div
  className="react-slicer"
>
  <div
    className="react-slicer__view"
  >
    <div
      key="1"
    >
      Item 1
    </div>
    <div
      key="2"
    >
      Item 2
    </div>
    <div
      key="3"
    >
      Item 3
    </div>
  </div>
  <Pagination
    currentPage={1}
    customClass="react-slicer"
    nextBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_next"
      >
        &gt;
      </span>
    }
    nextPage={[Function]}
    numberOfPages={3}
    prevBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_prev"
      >
        &lt;
      </span>
    }
    prevPage={[Function]}
    setPage={[Function]}
  />
</div>
`;

exports[`Setting page 2`] = `
<div
  className="react-slicer"
>
  <div
    className="react-slicer__view"
  >
    <div
      key="1"
    >
      Item 1
    </div>
    <div
      key="2"
    >
      Item 2
    </div>
    <div
      key="3"
    >
      Item 3
    </div>
  </div>
  <Pagination
    currentPage={1}
    customClass="react-slicer"
    nextBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_next"
      >
        &gt;
      </span>
    }
    nextPage={[Function]}
    numberOfPages={3}
    prevBtn={
      <span
        className="react-slicer__arrow react-slicer__arrow_prev"
      >
        &lt;
      </span>
    }
    prevPage={[Function]}
    setPage={[Function]}
  />
</div>
`;
